Fixed overflow
Fixed overflow for mobile version

--- a/style.css
+++ b/style.css
@@ -2102,7 +2102,9 @@ ______________T E L E F O N O______________
 _________________________________________________________*/
 
 @media (max-width: 410px) {
-
+    body {
+        overflow-x: hidden
+    }
     /*H E A D E R*/
     .navbar {
         flex-direction: column !important;
@@ -2276,6 +2278,7 @@ _________________________________________________________*/
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+        text-align: center;
     }
 
     .quienes-somos_texto--titulo span {
@@ -2358,7 +2361,7 @@ _________________________________________________________*/
         width: 100%;
         height: auto;
         padding: 0;
-        gap: 30px;
+        gap: 20px;
     }
 
     .nuestros-servicios_contenido--fila {
@@ -2367,7 +2370,7 @@ _________________________________________________________*/
         justify-content: center;
         align-items: center;
         width: 100%;
-        gap: 30px;
+        gap: 20px;
     }
 
     .nuestros-servicios_contenedor {
@@ -2377,9 +2380,9 @@ _________________________________________________________*/
         align-items: center;
         background: #6B6B6B;
         border-radius: 35px;
-        width: 100%;
+        width: 85%;
         height: auto;
-        padding: 10px 10px 10px 10px;
+        padding: 2px;
         gap: 0;
         text-align: center;
     }
@@ -2416,12 +2419,12 @@ _________________________________________________________*/
     .nuestros-servicios_contenedor--texto h3 {
         font-weight: 700;
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 16px;
     }
 
     .nuestros-servicios_contenedor--texto p {
         font-weight: 200;
-        font-size: 16px;
+        font-size: 14px;
     }
 
     /* Nuestros clientes */
@@ -2483,7 +2486,7 @@ _________________________________________________________*/
         justify-content: center;
         gap: 0;
         padding: 0;
-        width: auto;
+        width: 80%;
         height: 100%;
     }
 
@@ -2592,7 +2595,7 @@ _________________________________________________________*/
     }
 
     .casos-exito_logo img {
-        width: 180px;
+        width: 130px;
         height: auto;
     }
 
